--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -74,3 +74,64 @@ input {
 label {
     font-size: 1rem;
 }
+
+.hide {
+	display: none;
+}
+
+.contentContainer {
+	flex: 1;
+	display: flex;
+	font-size: 1.5rem;
+	justify-content: space-between;
+}
+
+.leftContainer {
+flex: .5;
+}
+
+.rightContainer {
+flex: .5;
+}
+
+.removeBackground {
+	background-color: #121212;
+}
+
+.parent {
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	grid-template-rows: repeat(4, 1fr) repeat(4, 1fr) repeat(5, 1fr);
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+	height: 100vh;
+	width: 100vw;
+	background: #121212;
+	color: seashell;
+	padding: 1rem;
+	}
+	
+	.div1 { grid-area: 1 / 1 / 2 / 3; font-size: 4rem; text-decoration: underline;}
+	.div2 { grid-area: 2 / 1 / 3 / 2;  font-size: 2rem;}
+	.div3 { grid-area: 2 / 2 / 3 / 3; font-size: 2rem;}
+	.div4 { grid-area: 3 / 1 / 4 / 2; font-size: 2rem;}
+	.div5 { grid-area: 3 / 2 / 4 / 3; font-size: 2rem;}
+	.div6 { grid-area: 4 / 1 / 5 / 2; font-size: 2rem;}
+	.div7 { grid-area: 4 / 2 / 5 / 3; font-size: 2rem;}
+	.div8 { grid-area: 5 / 1 / 6 / 3; font-size: 4rem;text-decoration: underline;}
+	.div9 { grid-area: 6 / 1 / 7 / 2; font-size: 2rem;}
+	.div10 { grid-area: 6 / 2 / 7 / 3; font-size: 2rem;}
+	.div11 { grid-area: 7 / 1 / 8 / 2; font-size: 2rem;}
+	.div12 { grid-area: 7 / 2 / 8 / 3; font-size: 2rem;}
+	.div13 { grid-area: 8 / 1 / 9 / 2; font-size: 2rem;}
+	.div14 { grid-area: 8 / 2 / 9 / 3; font-size: 2rem;}
+	.div15 { grid-area: 9 / 1 / 10 / 3; font-size: 4rem;text-decoration: underline;}
+	.div16 { grid-area: 10 / 1 / 11 / 2; font-size: 2rem;}
+	.div17 { grid-area: 10 / 2 / 11 / 3; font-size: 2rem;}
+	.div18 { grid-area: 11 / 1 / 12 / 2; font-size: 2rem;}
+	.div19 { grid-area: 11 / 2 / 12 / 3; font-size: 2rem;}
+	.div20 { grid-area: 12 / 1 / 13 / 2; font-size: 2rem;}
+	.div21 { grid-area: 12 / 2 / 13 / 3; font-size: 2rem;}
+	.div22 { grid-area: 13 / 1 / 14 / 2; font-size: 2rem;}
+	.div23 { grid-area: 13 / 2 / 14 / 3; font-size: 2rem;}
+	
