--- a/cv-project/src/styles/Education.css
+++ b/cv-project/src/styles/Education.css
@@ -1,53 +1,51 @@
 .educationContainer {
-    display: flex;
-    flex-direction: column;
-    background: green;
-    padding: 2rem;
-
+  display: flex;
+  flex-direction: column;
+  background: #505050;
+  padding: 2rem;
 }
 .educationHeaderContainer {
-    display: flex;
-    gap: .5rem;
+  display: flex;
+  gap: 0.5rem;
+  background: #121212;
 }
-
 
 .educationHeader {
-    font-size: 3rem;
+  font-size: 3rem;
 }
-
 
 .educationForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 3rem;
 }
 .schoolContainer {
-    display: flex;
-    width: 65%;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  width: 65%;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
 }
 .degreeContainer {
-    display: flex;
-    width: 65%;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  width: 65%;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
 }
 .eDatesContainer {
-    display: flex;
-    width: 65%;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  width: 65%;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .educationSaveButton {
-    width: 50%;
-    height: 50px;
-    border-radius: 20px;
+  width: 50%;
+  height: 50px;
+  border-radius: 20px;
 }
