--- a/cv-project/src/styles/Header.css
+++ b/cv-project/src/styles/Header.css
@@ -1,5 +1,5 @@
 .headerContainer {
-    background: blue;
-    font-size: 5rem;
-    padding: 1rem;
+  background: #505050;
+  font-size: 5rem;
+  padding: 1rem;
 }
