--- a/cv-project/src/styles/General.css
+++ b/cv-project/src/styles/General.css
@@ -1,53 +1,53 @@
 .generalContainer {
-    display: flex;
-    flex-direction: column;
-    background: red;
-    padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  background: #505050;
+  padding: 2rem;
 }
 
 .generalHeaderContainer {
-    flex: 1;
-    display: flex;
-    gap: .5rem;
+  flex: 1;
+  display: flex;
+  gap: 0.5rem;
+  background: #121212;
 }
 .generalHeader {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
-
 .generalForm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 3rem;
 }
 
 .nameContainer {
-    display: flex;
-    width: 65%;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  width: 65%;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
 }
 .emailContainer {
-    display: flex;
-    width: 65%;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  width: 65%;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
 }
 .phoneContainer {
-    display: flex;
-    width: 65%;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  width: 65%;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .generalSaveButton {
-    width: 50%;
-    height: 50px;
-    border-radius: 20px;
+  width: 50%;
+  height: 50px;
+  border-radius: 20px;
 }
